--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EBAC cars</title>
     <link rel="stylesheet" href="lib/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
