--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
                 </button>
                 <nav class="collapse navbar-collapse justify-content-end" id="menu">
                     <ul class="nav navbar-nav nav-pills">
-                        <li class="nav-item"><a class="nav-link active" href="#inicio">Destaque</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#carros">Carros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#promocao">Promoções</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#inicio">Carros</a></li>
                     </ul>
                 </nav>
             </div>
@@ -63,8 +61,8 @@
             </div>
         </div>
         <section id="inicio">
-            <h2 class="col-12 mb-5">Destaque</h2>
-            <div class="container">
+            <div class="container col-12 mb-5">
+                <h2>Carros</h2>
                 <div class="row">
                     <div class="card-deck col-sm-12 col-md-6 col-lg-4 mb-5">
                         <article class="card text-bg-dark">
@@ -115,112 +113,7 @@
                 </div>
             </div>
         </section>
-        <section id="carros">
-            <h2 class="col-12 mb-5">Carros</h2>
-            <div class="container">
-                <div class="row">
-                    <div class="card-deck col-sm-12 col-md-6 col-lg-4 mb-5">
-                        <article class="card text-bg-dark">
-                            <header class="card-header">
-                                AUDI
-                            </header>
-                            <img src="https://cdn.pixabay.com/photo/2015/01/19/13/51/car-604019_960_720.jpg" alt="">
-                            <div class="card-body">
-                                <h4 class="card-title">Q3</h4>
-                                <p class="card-text">
-                                    O seu novo Carro
-                                </p>
-                                <a href="#" class="btn btn-primary">Reservar</a>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="card-deck col-sm-12 col-md-6 col-lg-4 mb-5">
-                        <article class="card text-bg-dark">
-                            <header class="card-header">
-                                FERRARI
-                            </header>
-                            <img src="https://cdn.pixabay.com/photo/2017/11/08/14/39/ferrari-f430-2930661_960_720.jpg"
-                                alt="">
-                            <div class="card-body">
-                                <h4 class="card-title">SPIDER</h4>
-                                <p class="card-text">
-                                    O seu novo Carro
-                                </p>
-                                <a href="#" class="btn btn-primary">Reservar</a>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="card-deck col-sm-12 col-md-6 col-lg-4 mb-5">
-                        <article class="card text-bg-dark">
-                            <header class="card-header">
-                                FORD
-                            </header>
-                            <img src="https://cdn.pixabay.com/photo/2016/05/06/15/58/car-1376083_960_720.jpg" alt="">
-                            <div class="card-body">
-                                <h4 class="card-title">CARRERA</h4>
-                                <p class="card-text">
-                                    O seu novo Carro
-                                </p>
-                                <a href="#" class="btn btn-primary">Reservar</a>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="promocao">
-            <h2 class="col-12 mb-5">Promoção</h2>
-            <div class="container">
-                <div class="row">
-                    <div class="card-deck col-sm-12 col-md-6 col-lg-4 mb-5">
-                        <article class="card text-bg-dark">
-                            <header class="card-header">
-                                AUDI
-                            </header>
-                            <img src="https://cdn.pixabay.com/photo/2015/01/19/13/51/car-604019_960_720.jpg" alt="">
-                            <div class="card-body">
-                                <h4 class="card-title">Q3</h4>
-                                <p class="card-text">
-                                    O seu novo Carro
-                                </p>
-                                <a href="#" class="btn btn-primary">Reservar</a>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="card-deck col-sm-12 col-md-6 col-lg-4 mb-5">
-                        <article class="card text-bg-dark">
-                            <header class="card-header">
-                                FERRARI
-                            </header>
-                            <img src="https://cdn.pixabay.com/photo/2017/11/08/14/39/ferrari-f430-2930661_960_720.jpg"
-                                alt="">
-                            <div class="card-body">
-                                <h4 class="card-title">SPIDER</h4>
-                                <p class="card-text">
-                                    O seu novo Carro
-                                </p>
-                                <a href="#" class="btn btn-primary">Reservar</a>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="card-deck col-sm-12 col-md-6 col-lg-4 mb-5">
-                        <article class="card text-bg-dark">
-                            <header class="card-header">
-                                FORD
-                            </header>
-                            <img src="https://cdn.pixabay.com/photo/2016/05/06/15/58/car-1376083_960_720.jpg" alt="">
-                            <div class="card-body">
-                                <h4 class="card-title">CARRERA</h4>
-                                <p class="card-text">
-                                    O seu novo Carro
-                                </p>
-                                <a href="#" class="btn btn-primary">Reservar</a>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-            </div>
-        </section>
+        
     <script src="lib/bootstrap.bundle.min.js"></script>
 </body>
 
