--- a/index.html
+++ b/index.html
@@ -110,6 +110,52 @@
                             </div>
                         </article>
                     </div>
+                    <div class="card-deck col-sm-12 col-md-6 col-lg-4 mb-5">
+                        <article class="card text-bg-dark">
+                            <header class="card-header">
+                                AUDI
+                            </header>
+                            <img src="https://cdn.pixabay.com/photo/2015/01/19/13/51/car-604019_960_720.jpg" alt="">
+                            <div class="card-body">
+                                <h4 class="card-title">Q3</h4>
+                                <p class="card-text">
+                                    O seu novo Carro
+                                </p>
+                                <a href="#" class="btn btn-primary">Reservar</a>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="card-deck col-sm-12 col-md-6 col-lg-4 mb-5">
+                        <article class="card text-bg-dark">
+                            <header class="card-header">
+                                FERRARI
+                            </header>
+                            <img src="https://cdn.pixabay.com/photo/2017/11/08/14/39/ferrari-f430-2930661_960_720.jpg"
+                                alt="">
+                            <div class="card-body">
+                                <h4 class="card-title">SPIDER</h4>
+                                <p class="card-text">
+                                    O seu novo Carro
+                                </p>
+                                <a href="#" class="btn btn-primary">Reservar</a>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="card-deck col-sm-12 col-md-6 col-lg-4 mb-5">
+                        <article class="card text-bg-dark">
+                            <header class="card-header">
+                                FORD
+                            </header>
+                            <img src="https://cdn.pixabay.com/photo/2016/05/06/15/58/car-1376083_960_720.jpg" alt="">
+                            <div class="card-body">
+                                <h4 class="card-title">CARRERA</h4>
+                                <p class="card-text">
+                                    O seu novo Carro
+                                </p>
+                                <a href="#" class="btn btn-primary">Reservar</a>
+                            </div>
+                        </article>
+                    </div>
                 </div>
             </div>
         </section>
